# Palomma_Protect

./: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
.claude/: settings.json
docs/: DECISIONES.md  INTEGRACION_PAY.md  TABLAS.md
scoring-service/: .env.example  README.md  api.py  pyproject.toml
scoring-service/app/: __init__.py  cross_merchant_scoring.py  merchant_scoring.py  portfolio_analytics.py
scoring-service/scoring/: __init__.py
scoring-service/scoring/cross_merchant/: config.py  data_loader.py  portfolio_analytics.py  score_calculator.py
scoring-service/scoring/merchant/: __init__.py  config.py  data_loader.py  score_calculator.py  tier_classifier.py  utils.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/backoffice/: layout.tsx  (+1 more)
src/components/: BackofficeNav.tsx  Bird.tsx  EstudiosTabs.tsx  ProtectTabs.tsx
src/lib/: auco.ts  config.ts  contratos.ts  format.ts  novedades.ts  radicacion.ts  radicacionDrive.ts
supabase/: config.toml
supabase/migrations/: 0001_init.sql  0002_documento_contrato_marco.sql  0003_inmobiliaria_firma.sql  0004_inmobiliaria_bienvenida.sql  0005_inmobiliaria_merchant.sql  0006_radicacion.sql  0007_radicacion_cancelada.sql  0008_radicacion_pendiente_ingreso.sql  0009_radicacion_folder.sql  0010_radicacion_validacion.sql  0011_radicacion_aprobada.sql  0012_inmobiliaria_representante.sql  0013_radicacion_firma.sql  0014_radicacion_rebote.sql  0015_estudio_fecha_ingreso.sql  0016_radicacion_detalle.sql  0017_novedad_ingreso.sql  0018_contrato_en_retiro.sql
(+63 files in other folders)
