[project]
name = "experiments"
version = "0.1.0"
description = "Customer credit scoring system for Palomma rentals"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "clickhouse-connect>=0.15.1",
    "pandas>=3.0.2",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.18.0",
    "duckdb>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
